--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Number 36</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="refresh"
+      content="0;url=https://www.youtube.com/watch?v=Wr9ie2J2690" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>
+      If you are not redirected automatically, follow this
+      <a href="https://www.youtube.com/watch?v=Wr9ie2J2690">link to YouTube</a>.
+    </p>
+  </body>
 </html>
